VFS-3154 Fix: content-info text alignment, input disabled box-shadow.

--- a/src/app/styles/bootstrap-config.scss
+++ b/src/app/styles/bootstrap-config.scss
@@ -49,6 +49,12 @@
 @import "bootstrap/forms";
 .form-control {
   @include box-shadow($control-box-shadow);
+  &:focus {
+    @include box-shadow($control-box-shadow-focus);
+  }
+  &[disabled] {
+    @include box-shadow(none);
+  }
 }
 
 @import "bootstrap/buttons";
