--- a/src/app/styles/content-info.scss
+++ b/src/app/styles/content-info.scss
@@ -19,7 +19,7 @@
     font-size: 12pt;
     letter-spacing: 1px;
     text-transform: uppercase;
-    margin-bottom: 2em;
+    margin-bottom: 0.8em;
   }
   p.lead {
     margin-bottom: 2.5em;
